# pikcs

./: README.md  install.sh
pikcs/debug/src/: lib.rs
pikcs/main/: Cargo.toml
pikcs/main/src/: .install.rs.swp  consts.rs  git.rs  install.rs  log.rs  main.rs  path.rs  read_build.rs  read_package_list.rs  remove.rs  search.rs  setup.rs  update.rs  upgrade.rs  version.rs
pikcs/user/: Cargo.toml
pikcs/user/src/: add.rs  lib.rs
