[package]
name = "pikcs"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
dirs = "5.0.1"
git2 = "0.19.0"
indicatif = "0.17.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
clap = { version = "4.4", features = ["derive"] }
user = { path = "../user" } 
debug = { path = "../debug" }
